--- a/SSDI.RequestMonitoring.UI/JComponents/Modals/AttachmentViewer__Modal.razor
+++ b/SSDI.RequestMonitoring.UI/JComponents/Modals/AttachmentViewer__Modal.razor
@@ -237,7 +237,7 @@
         {
             await ClosePreview();
         }
-        else if (ShowPreview && IsImage(SelectedAttachment.FileName))
+        else if (ShowPreview && IsImage(SelectedAttachment!.FileName))
         {
             if (e.Key == "+" || e.Key == "=")
             {
