--- a/SSDI.RequestMonitoring.UI/wwwroot/css/pages/page.css
+++ b/SSDI.RequestMonitoring.UI/wwwroot/css/pages/page.css
@@ -179,7 +179,7 @@
 /*#endregion */
 
 /*cards*/
-.page__cards {
+.page__metrics {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1.25rem;
@@ -1234,4 +1234,4 @@ tr[row-type='sticky-header'] > th {
     .page__table-status {
         padding: 0.1rem 0.5rem;
     }
-}
+} 
