--- a/SSDI.RequestMonitoring.UI/Layout/NavMenu.razor
+++ b/SSDI.RequestMonitoring.UI/Layout/NavMenu.razor
@@ -18,11 +18,18 @@
     <nav class="sitenav slide-in-left @(expanded && isMobile ? "open" : "")" aria-labelledby="main-menu">
         <FluentNavMenu Id="main-menu" Title="Navigation menu" @bind-Expanded="expanded" CustomToggle="true">
             <FluentNavMenu Id="main-menu" Width="250" Collapsible="true" Title="Navigation menu" @bind-Expanded="expanded" CustomToggle="true">
+                @if (isMobile)
+                {
+                    <div class="navmenu__logo">
+                        <img src="/images/logo/app-logo-square-trans.png" />
+                        <p> Requests Monitoring</p>
+                    </div>
+                }
                 <FluentNavLink Href="/dashboard" Match="NavLinkMatch.All" Icon="@(new Icons.Regular.Size20.Home())" IconColor="Color.Accent">Dashboard</FluentNavLink>
                 <FluentNavLink Href="/requests/purchase-requests" Icon="@(new Icons.Regular.Size20.ShoppingBag())" IconColor="Color.Accent">Purchase Requests</FluentNavLink>
                 <FluentNavLink Href="/requests/job-orders" Icon="@(new Icons.Regular.Size20.Wrench())" IconColor="Color.Accent">Job Orders</FluentNavLink>
             </FluentNavMenu>
-        </FluentNavMenu> 
+        </FluentNavMenu>
     </nav>
 </div>
 
