--- a/SSDI.RequestMonitoring.UI/Pages/Requests/JobOrder/JobOrder_Details.razor
+++ b/SSDI.RequestMonitoring.UI/Pages/Requests/JobOrder/JobOrder_Details.razor
@@ -35,7 +35,7 @@
             <!-- Header Section -->
             <div class="details-page__header">
                 <div class="details-page__title-section">
-                    <h1 class="details-page__title">Job Order #@Request?.RequestNumber</h1>
+                    <h1 class="details-page__title">Job Order #@Request?.SeriesNumber</h1>
                 </div>
             </div>
 
