--- a/SSDI.RequestMonitoring.UI/Pages/Requests/PurchaseRequest/PurchaseRequest_Details.razor
+++ b/SSDI.RequestMonitoring.UI/Pages/Requests/PurchaseRequest/PurchaseRequest_Details.razor
@@ -35,7 +35,7 @@
             <!-- Header Section -->
             <div class="details-page__header">
                 <div class="details-page__title-section">
-                    <h1 class="details-page__title">Purchase Request #@Request?.RequestNumber</h1>
+                    <h1 class="details-page__title">Purchase Request #@Request?.SeriesNumber</h1>
                 </div>
             </div>
 
@@ -100,7 +100,7 @@
                     <div class="tabs__content">
                         @if (ActiveTab == "details")
                         {
-                            <RequestDetails__Control Request="Request" />
+                            <RequestDetails__Control Request="Request" ReportType="@ReportType" AwaitingApprovalDate="@awaitingApprovalDate" />
                         }
                         else if (ActiveTab == "slips")
                         {
@@ -171,6 +171,7 @@
 
             @if (utils.IsCEO() && Request?.Status == RequestStatus.ForCeoApproval)
             {
+                awaitingApprovalDate = utils.IsUser() ? null : Request.Approvals?.LastOrDefault(a => a.Stage == ApprovalStage.Admin && a.Action == ApprovalAction.Approve)?.ActionDate;
                 <button class="btn btn--success" @onclick="ApproveByCeoRequest" title="Approve request">
                     <i class="bi bi-check-lg"></i> Verify
                 </button>
@@ -183,6 +184,7 @@
 
             @if (utils.IsAdmin() && Request?.Status == RequestStatus.ForRequisition)
             {
+                awaitingApprovalDate = utils.IsUser() ? null : Request.Approvals?.LastOrDefault(a => a.Stage == ApprovalStage.CeoOrAvp && a.Action == ApprovalAction.Approve)?.ActionDate;
                 <button class="btn btn--final" @onclick="RequestClose" title="Close request">
                     <i class="bi bi-lock-fill"></i> Request Closure
                 </button>
